Update 1 - Lista_de_Exercício_2025_04_02.ipynb.0.01
Adicionei comentarios no código da atividade 1

--- a/1 - Lista_de_Exercício_2025_04_02.ipynb
+++ b/1 - Lista_de_Exercício_2025_04_02.ipynb
@@ -68,8 +68,11 @@
         }
       ],
       "source": [
+        "# Pede um numero inteiro para o usuario",
         "n = int(input('Insira um número inteiro: '))\n",
+        "# ** eh usada para fazer a potencia do numero",
         "print(\"O quadrado do número é\",n**2)\n",
+        "# Para fazer a raiz quadrada, precisa importar a biblioteca math e usar a funcao sqrt()",
         "print(\"A raiz quadrada do número é\",math.sqrt(n))\n",
         "print(\"A divisão do quadrado pela raiz quadrada\",(n**2)/math.sqrt(n))"
       ]
