Update 1 - Lista_de_Exercício_2025_04_02.ipynb.0.03

--- a/1 - Lista_de_Exercício_2025_04_02.ipynb
+++ b/1 - Lista_de_Exercício_2025_04_02.ipynb
@@ -123,9 +123,11 @@
     {
       "cell_type": "code",
       "source": [
+        "# Pedem tres numeros decimais para o usuario\n",
         "n1 = float(input(\"Insira o primeiro numero: \"))\n",
         "n2 = float(input(\"Insira o segundo numero: \"))\n",
         "n3 = float(input(\"Insira o terceiro numero: \"))\n",
+        "# Calcula a media\n",
         "print(\"A média dos números é\",(n1+n2+n3)/3)"
       ],
       "metadata": {
@@ -163,8 +165,10 @@
     {
       "cell_type": "code",
       "source": [
+        "# Pede o valor da velocidade e das horas, ambos decimais, para o usuario\n",
         "v = float(input(\"Insira a velocidade média da viagem: \"))\n",
         "h = float(input(\"Insira duração da viagem: \"))\n",
+        "# Executa o calculo da gasolina gasta e mostra o resultado para o usuario\n",
         "print(\"Foram gastos\",round(v*h/12,2), \"litros\")"
       ],
       "metadata": {
@@ -199,8 +203,10 @@
     {
       "cell_type": "code",
       "source": [
+        "# Pede dois numeros inteiros para o usuario\n",
         "x= int(input(\"Insira um numero inteiro: \"))\n",
         "y= int(input(\"Insira um numero inteiro: \"))\n",
+        "# Mostra o quoeficiente e o resto da divisao para o usuario\n",
         "print(\"O quociente da divisão é\",x//y)\n",
         "print(\"O resto da divisão é\",x%y)"
       ],
@@ -237,9 +243,11 @@
     {
       "cell_type": "code",
       "source": [
+        "# Pede tres numeros decimais para o usuario\n",
         "a = float(input(\"Insira o primeiro número: \"))\n",
         "b = float(input(\"Insira o segundo número: \"))\n",
         "c = float(input(\"Insira o terceiro número: \"))\n",
+        "# Mostra a media para o usuario\n",
         "print(\"A media de\",a,\",\",b,\"e\",c,\"é\",(a+b+c)/3)"
       ],
       "metadata": {
@@ -275,11 +283,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# Pede o codigo e o nome do vendedor para o usuario\n",
         "c = input('Insira o código do vendedor: ')\n",
         "n = input('Insira o nome do vendedor: ')\n",
+        "# Pede o salario base para o usuario\n",
         "s = float(input('Insira o salário base do vendedor: R$ '))\n",
+        "# Pede quantos itens foram vendidos para o usuario\n",
         "i = int(input('Insira quantos produtos foram vendidos: '))\n",
         "\n",
+        "# Calcula o salario final do vendedor para o usuario\n",
         "print(\"O vendedor\",n,\", código\",c,\"tem o salário final de R$\"+ str(round(s*(1+i*0.01),2)))"
       ],
       "metadata": {
@@ -330,9 +342,12 @@
     {
       "cell_type": "code",
       "source": [
+        "# Pede a altura e o raio do cilindro para o usuario e converte os valores do padrao brasileiro para o americano\n",
         "altura = float(input(\"Insira a altura do Cilindro: \").replace('.','').replace(',','.'))\n",
         "raio = float(input(\"Insira o raio do Cilindro: \").replace('.','').replace(',','.'))\n",
+        "# Define quantos litros o cilindro usa \n",
         "qtdL = (raio * 3.14 * 2)*(altura+1)\n",
+        "# Verifica se sobra algum restos dos litro\n",
         "if qtdL%5 !=0:\n",
         "  print(\"Serão necessários\",qtdL,\"Litros de tinta. Será necessário comprar\",int((qtdL//5)+1),\"barris, com o custo de\",((qtdL//5)+1)*150,\"reais\")\n",
         "else:\n",
@@ -370,8 +385,10 @@
     {
       "cell_type": "code",
       "source": [
+        "# Pede o preco base para o usuario\n",
         "prcB = float(input(\"Insira o preço base do computador: \"))\n",
         "\n",
+        "# Calcula o preco do computador \n",
         "print('O preço de venda é R$'+str(prcB*1.45*1.28))"
       ],
       "metadata": {
